y.output
Terminals which are not used

   INT_T
   FLOAT_T
   IF
   ELSE
   WHILE
   AND
   OR
   EQ
   NEQ
   LEQ
   GEQ
   CONST
   FLOAT_C
   INT_C
   ID


Grammar

    0 $accept: program $end

    1 program: tokens

    2 tokens: tokens token
    3       | /* empty */

    4 token: myToken1
    5      | myToken2


Terminals, with rules where they appear

$end (0) 0
error (256)
myToken1 (258) 4
myToken2 (259) 5
INT_T (260)
FLOAT_T (261)
IF (262)
ELSE (263)
WHILE (264)
AND (265)
OR (266)
EQ (267)
NEQ (268)
LEQ (269)
GEQ (270)
CONST (271)
FLOAT_C (272)
INT_C (273)
ID (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1, on right: 0
tokens (22)
    on left: 2 3, on right: 1 2
token (23)
    on left: 4 5, on right: 2


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (tokens)

    program  go to state 1
    tokens   go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: tokens .
    2 tokens: tokens . token

    myToken1  shift, and go to state 4
    myToken2  shift, and go to state 5

    $default  reduce using rule 1 (program)

    token  go to state 6


state 3

    0 $accept: program $end .

    $default  accept


state 4

    4 token: myToken1 .

    $default  reduce using rule 4 (token)


state 5

    5 token: myToken2 .

    $default  reduce using rule 5 (token)


state 6

    2 tokens: tokens token .

    $default  reduce using rule 2 (tokens)
